--- a/ufaframe.html
+++ b/ufaframe.html
@@ -1,8 +1,6 @@
 <!DOCTPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html lang="ja">
 <head>
-<meta name="robots" content="noindex,nofollow">
-<meta http-equiv="content-type" content="text/html;charset=Shift_JIS">
 <meta http-equiv="content-style-type"content="text/css">
 
 <link rel="shortcut icon" href="favicon.ico">
@@ -11,6 +9,7 @@
 <body>
 <iframe src="index.html" name="ccmain" height="760" width="100%" frameborder="0">
 この部分は iframe 対応のブラウザで見てください。
+もしくは<a href="./index.html">こちら</a>から
 </iframe>
 <p>
 Umi Swing (c)M-Souko min
