--- a/ufaframe.html
+++ b/ufaframe.html
@@ -1,4 +1,4 @@
-<!DOCTPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!doctype html>
 <html lang="ja">
 <head>
 <meta http-equiv="content-style-type"content="text/css">
