--- a/ufaframe.html
+++ b/ufaframe.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta http-equiv="content-style-type"content="text/css">
-
+<meta charset="utf-8">
 <link rel="shortcut icon" href="favicon.ico">
 <title>Umi Swing</title>
 </head>
